# ChangeLog for app-text/poppler
# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/app-text/poppler/ChangeLog,v 1.292 2011/05/01 00:21:42 reavertm Exp $

*poppler-0.16.5 (01 May 2011)

  01 May 2011; Maciej Mrozowski <reavertm@gentoo.org> -poppler-0.16.4.ebuild,
  +poppler-0.16.5.ebuild:
  Version bump, remove old

  26 Apr 2011; Tomáš Chvátal <scarabeus@gentoo.org> -poppler-0.14.5.ebuild:
  old

  26 Apr 2011; Kacper Kowalik <xarthisius@gentoo.org> poppler-0.14.5-r1.ebuild:
  ppc64 stable wrt #308017

  23 Apr 2011; Raúl Porcel <armin76@gentoo.org> poppler-0.14.5-r1.ebuild:
  alpha/ia64/s390/sh/sparc stable wrt #308017

  22 Apr 2011; Brent Baude <ranger@gentoo.org> poppler-0.14.5-r1.ebuild:
  Marking poppler-0.14.5-r1 ppc for bug 308017

  21 Apr 2011; Andreas K. Huettel <dilfridge@gentoo.org>
  poppler-0.14.5-r1.ebuild:
  arm stable, bug 308017

  16 Apr 2011; Thomas Kahle <tomka@gentoo.org> poppler-0.14.5-r1.ebuild:
  x86 stable per bug 308017

  15 Apr 2011; Christoph Mende <angelos@gentoo.org> poppler-0.14.5-r1.ebuild:
  Stable on amd64 wrt bug #308017

*poppler-0.16.4 (15 Apr 2011)

  15 Apr 2011; Maciej Mrozowski <reavertm@gentoo.org>
  -poppler-0.16.3-r1.ebuild, +poppler-0.16.4.ebuild:
  Version bump, remove old

  14 Apr 2011; Jeroen Roovers <jer@gentoo.org> poppler-0.14.5-r1.ebuild:
  Stable for HPPA (bug #308017).

*poppler-0.16.3-r1 (14 Apr 2011)
*poppler-0.14.5-r1 (14 Apr 2011)

  14 Apr 2011; Andreas K. Huettel <dilfridge@gentoo.org>
  +poppler-0.14.5-r1.ebuild, -poppler-0.16.3.ebuild,
  +poppler-0.16.3-r1.ebuild:
  Disable abiword backend (not supported anymore, security issues, bug
  308017)

  03 Apr 2011; Andreas K. Huettel <dilfridge@gentoo.org>
  -poppler-0.14.4.ebuild:
  Cleanup

*poppler-0.16.3 (28 Feb 2011)

  28 Feb 2011; Maciej Mrozowski <reavertm@gentoo.org>
  -poppler-0.16.2.ebuild, +poppler-0.16.3.ebuild:
  Version bump, remove old
