@@ -67,6 +67,7 @@
 =app-text/kding-0.4.3
 =app-text/poppler-0.14.5-r1
 =app-text/poppler-0.16.5
+=app-text/poppler-0.16.6
 =dev-db/hk_classes-0.8.3
 =dev-db/hk_classes-0.8.3-r1
 =dev-db/knoda-0.8.3
