@@ -1,6 +1,8 @@
 DIST poppler-0.14.5.tar.gz 1798194 RMD160 80d4441912b02d89777405ce03f8e175c4ccfa9e SHA1 e23b115e4ebc06c937318688b06a7c6b3319a00a SHA256 c805317c4c1a7080098ae8c7c2a1c1b8e2c784858fc2e04941878eeb8164814c
 DIST poppler-0.16.5.tar.gz 1950312 RMD160 dd28bec64bf19050ba2cbdd5a71fa398370de21a SHA1 29994e0b1be1110400d943f9b921675ba1a52eb5 SHA256 9f27b949c0cd52eef981654b8e13acd62e1e0f9a4bde4d96876da11ad84c39d9
+DIST poppler-0.16.6.tar.gz 1951216 RMD160 1833e5bbd5d3c4d920e902bf3d5cfefacacd5edc SHA1 caeef61868f214d8c600172fd4cb64f332121eee SHA256 2a3bb264f076c494e813cbdf4c9dc733a9755b9e2763e91fd9639cd3b00d4b3b
 EBUILD poppler-0.14.5-r1.ebuild 2638 RMD160 dbb78383770f6c797380d1ab841f69d678d1b87c SHA1 cd25dd21ecff962647a5b8712e4d24b52ab343c5 SHA256 77680ac5bf9eb20528ed396a024a1619ab0c57785ea33a12a83fc34eecfb480a
 EBUILD poppler-0.16.5.ebuild 2821 RMD160 e465d381835715b7877f17f7ba4eee32552eb0f9 SHA1 1c9cd834e4a191106e84277f70fd143e2cbe541f SHA256 cbd81ee89cae49217b1b2e7f9f2ec703da6443d2a11952419bc2694634515bdf
-MISC ChangeLog 41219 RMD160 a18b5382a8d08184821822021511ce2614a2fec6 SHA1 16824a23edfff3a85b1a9a13a15351c152782dc6 SHA256 62697ce362aa90d2ff116ea3e25e3d2a643a8a5a132fec842188fa205fe5979c
+EBUILD poppler-0.16.6.ebuild 2821 RMD160 2f426f6d07e07430c7128b128f7f8c42ff5799b9 SHA1 bd77301b821fbe5b90d7ce8cc822f9d5df842c4f SHA256 7bae8fc43d8a22f53647870a6c73fe462c92c920299373de355c5cca363ad45a
+MISC ChangeLog 41344 RMD160 deb56e09b9d9565ac969be329fb65a825b3f0f86 SHA1 b4db7d40b88d3e6e1ca5d95d4708fd47c2689288 SHA256 02f415b2fe7c49ff24ba09260a6b80226c28692210f5b157a9562ed929c365bd
 MISC metadata.xml 531 RMD160 bdae255e3871cac7966787a198b50d0f77180747 SHA1 8d191a0d9acc9c4494dd4b80ba72e420cf5489a4 SHA256 afef403de543eb24d44ec80c5353f932dffd16c5cd805f311a82089cdb4f4a99
