@@ -1,6 +1,11 @@
 # ChangeLog for app-text/poppler
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-text/poppler/ChangeLog,v 1.292 2011/05/01 00:21:42 reavertm Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-text/poppler/ChangeLog,v 1.293 2011/05/31 02:09:04 reavertm Exp $
+
+*poppler-0.16.6 (31 May 2011)
+
+  31 May 2011; Maciej Mrozowski <reavertm@gentoo.org> +poppler-0.16.6.ebuild:
+  Version bump
 
 *poppler-0.16.5 (01 May 2011)
 
